=head1 Krang Changelog

This document contains a list of changes for each release of Krang.


=head2 3.02 - IN DEVELOPMENT

=over

=item *

Removed requirement to upload file when creating new media; can now use inline 
editor without specifying a file. [Noam Weinstein]

=item *

Added ability to search full text of stories and templates from CMS. [Noam Weinstein]

=item *

Implemented beta version of flat-template support, allowing
a single template per top-level story type. [Noam Weinstein]

=back


=head2 3.01 - IN DEVELOPMENT

=over

=item *

Made previewing from story-edit screen validate and then display the user's
latest changes (i.e. changes they haven't yet saved). [Noam Weinstein]

=item *

Made missing-template errors show the actual name of a missing file
even if it was included by another template. [Noam Weinstein]

=item *

Added alerts notifying user if the template or media file being edited was
modified by another user or window. (This used to crash.) [Noam Weinstein]

=item *

Implemented admin perm 'admin_users_limited'.  Redirect to login
screen if user tampers with GID params. [Bodo Schulze]

=item *

Added new option --no_default to F<bin/krang_useradd> to prevent the user
being associated with group 'default'. [Bodo Schulze]

=item *

Added real-time client-side syntax-highlighting (the CodePress library) to 
the textareas used for viewing and editing Templates.  Thanks to Jesse for 
suggesting this feature, and finding the most excellent CodePress.org project!
[David Kaufman]

=item *

Completed v1 of multiple-window, multiple-session support, allowing a user 
to open multiple stories, templates, publishing windows, etc. at the same time,
and log off each window individually or all together. [Noam Weinstein]

=item *

Implemented requested "Replace Story" feature where instead of a simple duplicate-URL
error, creating a story that conflicts with existing URLs now yields a dialogue box 