@@ -25,15 +25,19 @@ The top box on the Edit Story page has the Story's properties and its Contributo
 </p>
 
 <ul>
-<li><b>Id: </b> Story ID. Set by the CMS on creation of a New Story. This field cannot be changed.</li>
-<li><b>Type:</b> Each Story has a Type. This is set by the CMS on creation of a New Story and is not an editable field. If you selected the incorrect Story Type, you will need to return to 'New Story.' Story Type selection determines the elements that are available on the Edit Story page.</li>
-<li><b>Current Version: </b> Field set by the CMS. This is a non-editable field, reflects the version number of the Story.</li>
-<li><b>Published Version: </b>Version of the Story that was last published. This may be different from the Current Version if changes were made to the Story after the last publish. This field is controlled automatically by the CMS.</li>
 <li><b>URL:</b> The URL field is controlled by the CMS. Although it appears as a non-editable field, it can be changed by modifying the fields that make up the URL. These fields are the site and category. </li>
+<li><b>Type:</b> Each Story has a Type. This is set by the CMS on creation of a New Story and is not an editable field. If you selected the incorrect Story Type, you will need to return to 'New Story.' Story Type selection determines the elements that are available on the Edit Story page.</li>
+<li><b>Story Id: </b> Story ID. Set by the CMS on creation of a New Story. This field cannot be changed.</li>
+
 <li><b>Title: </b> This is the Title of your Story. Depending on the Story Type it may appear directly in the output. The Title is a required field.</li>
 <li><b>Slug:</b> The slug is a one-word identifier used as the last part of the Story's URI, and the directory in which the story resides. Some Story Types require a slug. For those that do not, you may choose to make a Story a Category Index by checking the box to the right of the slug field. The URL of the Category plus the slug (if any) form the complete URL of the Story, which must be unique.</li>
 <li><b>Cover Date: </b> As on the New Story page, the cover Date defaults to the current date and time, but it can be modified to a future or previous date. The cover date is a required field and may appear on some Story Types directly in the URL or the page.</li>
+
+<li><b>Current Version: </b> Field set by the CMS. This is a non-editable field, reflects the version number of the Story.</li>
+<li><b>Published Version: </b>Version of the Story that was last published. This may be different from the Current Version if changes were made to the Story after the last publish. This field is controlled automatically by the CMS.</li>
+<li><b>All Versions: </b>You can revert to a previously saved version. Select the version number from the drop-down and click on <i>Revert</i>. If you prefer, you can also <i>View</i> a previously saved version.</l>
 <li><b>Contributors: </b> A contributor can be any person, ex. Writer or photographer who contributed to the Story. Click on <i>Edit Contributors</i> to associate, or un-associate your contributors. See <a href="help.pl?topic=contributor_associate" class="helplink">Associate Contributors</a> for additional Help.</li>
+
 </ul>
 
 <h3>Content</h3>
@@ -64,17 +68,22 @@ on <i>Replace This Category</i> at the bottom of the page.</li>
 
 <h3>Actions</h3>
 <p>
-At the bottom of the edit story page, there are buttons and different actions to choose from.
+At the bottom of the edit story page, there are buttons and different actions to choose from. Some of them are only available at the top level of a story; others are available only when editing a container element.
 </p>
 
 <ul>
-<li><b>Check In: </b> After completing your Story, you can Check it in for another editor. Select the desk you want to check the Story into and click <i>Check In</i>.</li>
-<li><b>Revert: </b>You can revert to a previously saved version. Select the version number from the drop-down and click on <i>Revert</i>. If you prefer, you can also <i>View</i> a previously saved version.</li>
-<li><b>Save: </b>Click on <i>Save</i> to save your Story. Clicking on this button will take you up a level to 'My Workspace'.</li>
-<li><b>Save & Stay:</b> Click on <i>Save & Stay</i> to save your Story and remain on the Edit Story screen.</li>
+
+<li><b>Undo:</b> Click on <i>Undo</i> to discard unsaved changes and return to your Workspace. (This will not undo anything that's already been written to disk by clicking 'Save Story & Stay'.)</li>
 <li><b>Publish:</b> Click on <i>Publish</i> and your Story is published immediately. If you would like to schedule your Story to publish at a later date, click on <i>Schedule</i> at the top of the page. See <a href="help.pl?topic=schedule" class="helplink">Schedule Editor</a> for more information.</li>
-<li><b>Reset:</b> Clicking on <i>Reset</i> will reset all text fields to last Saved version.</li>
+<li><b>Check In To [Desk]</b> After completing your Story, you can Check it in for another editor. Select the desk you want to check the Story into and click <i>Check In</i>.</li>
 <li><b>Delete: </b>Click on <i>Delete</i> to delete your Story from the CMS.</li>
+
+<li><b>Done Editing [Element]: </b>Click on <i>Done Editing [Element]</i> to return to the previous level of the Story.</li>
+<li><b>Delete [Element]: </b>Click on <i>Delete [Element]</i> to remove this [Element] from the Story.</li>
+
+<li><b>Save Story & Stay:</b> Click on <i>Save Story & Stay</i> to save your Story to disk and remain on the Edit Story screen.</li>
+<li><b>Save Story: </b>Click on <i>Save</i> to save your Story to disk and return to your Workspace.</li>
+
 </ul>
 
 <p>
@@ -82,8 +91,8 @@ In addition to the Action buttons featured at the bottom of the page, the follow
 </p>
 
 <ul>
-<li><b>Log:</b> Please see <a href="help.pl?topic=log" class="helplink">Log</a> for more information.</li>
-<li><b>Schedule:</b> Please see <a href="help.pl?topic=schedule" class="helplink">Schedule</a> for more information.</li>
+<li><b>View Log:</b> Please see <a href="help.pl?topic=log" class="helplink">Log</a> for more information.</li>
+<li><b>View Schedule:</b> Please see <a href="help.pl?topic=schedule" class="helplink">Schedule</a> for more information.</li>
 </ul>
 
 <tmpl_include help_footer.tmpl>
